--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "react-icons": "^4.10.1",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.2",
-    "redux": "^4.2.1"
+    "redux": "^4.2.1",
+    "zustand": "^4.4.0"
   },
   "devDependencies": {
+    "@types/ms": "^0.7.31",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
