--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.11.0",
     "@reduxjs/toolkit": "^1.9.5",
     "@tanstack/react-query": "^4.32.0",
+    "@types/styled-components": "^5.1.26",
     "axios": "^1.4.0",
     "framer-motion": "^10.13.1",
     "ms": "^2.1.3",
@@ -26,6 +27,7 @@
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.2",
     "redux": "^4.2.1",
+    "styled-components": "^6.0.6",
     "zustand": "^4.4.0"
   },
   "devDependencies": {
